--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- <link rel="stylesheet" href="reset.css"> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Wireframe Exercise</title>
 </head>
 
@@ -46,7 +46,9 @@
             </article>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+
+    </footer>
 </body>
 
 
